--- a/css/general.css
+++ b/css/general.css
@@ -48,11 +48,18 @@ body {
 .grid--5--cols {
   grid-template-columns: repeat(5, 1fr);
 }
+.grid--center-v {
+  align-items: center;
+}
 
-.heading-primary {
+.heading-primary,
+.heading-secondery,
+.heading-tertiary {
   font-weight: 700;
   color: #333;
   letter-spacing: -0.5px;
+}
+.heading-primary {
   font-size: 4.8rem;
   font-weight: 700;
   line-height: 1.05;
@@ -60,7 +67,27 @@ body {
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
 }
+.heading-secondery {
+  font-size: 3.6rem;
+  line-height: 1.2;
+  margin-bottom: 6.8rem;
+}
+.heading-tertiary {
+  font-size: 2.8rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+.subheading {
+  display: block;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.2rem;
+}
 
+.btn, /*Releated to the butto exists in cta-form*/
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -70,6 +97,11 @@ body {
   border-radius: 9px;
   text-decoration: none;
   transition: all 0.3s;
+
+  /*for only .btn*/
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -94,6 +126,61 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.btn--form {
+  background-color: #45260e;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor; /* This should reflect the color */
+  padding: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f; /* Changing color on hover and for visited links */
+  border-bottom: 1px solid transparent; /* This will hide the border */
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+strong {
+  font-weight: 500;
 }
